--- a/index.html
+++ b/index.html
@@ -179,6 +179,44 @@
                         <div class="candidate" data-candidate="WAHEED_RABBANI"><img src="images/WAHEED RABBANI.jpg" alt="WAHEED RABBANI"><span>WAHEED RABBANI</span></div>
                     </div>
                 </div>
+                
+                <div class="position" id="cultural-vc">
+                    <h3>Cultural (V.C)</h3>
+                    <div class="candidate-list">
+                        <div class="candidate" data-candidate="SUMMAIYA_CVC"><img src="images/SUMMAIYA.jpg" alt="SUMMAIYA"><span>SUMMAIYA</span></div>
+                        <div class="candidate" data-candidate="ANOUD_CVC"><img src="images/ANOUD.jpg" alt="ANOUD"><span>ANOUD</span></div>
+                        <div class="candidate" data-candidate="YASMEEN_CVC"><img src="images/YASMEEN.jpg" alt="YASMEEN"><span>YASMEEN</span></div>
+                    </div>
+                </div>
+                <div class="position" id="discipline-vc">
+                    <h3>Discipline (V.C)</h3>
+                    <div class="candidate-list">
+                        <div class="candidate" data-candidate="AREEBA_NASHRA_DVC"><img src="images/AREEBA NASHRA.jpg" alt="AREEBA NASHRA"><span>AREEBA NASHRA</span></div>
+                        <div class="candidate" data-candidate="AYESHA_HANI_DVC"><img src="images/AYESHA HANI.jpg" alt="AYESHA HANI"><span>AYESHA HANI</span></div>
+                        <div class="candidate" data-candidate="AHIL_UDDIN_DVC"><img src="images/AHIL UDDIN.jpg" alt="AHIL UDDIN"><span>AHIL UDDIN</span></div>
+                        <div class="candidate" data-candidate="SATTAR_DVC"><img src="images/SATTAR.jpg" alt="SATTAR"><span>SATTAR</span></div>
+                        <div class="candidate" data-candidate="RIYAN_DVC"><img src="images/RIYAN.jpg" alt="RIYAN"><span>RIYAN</span></div>
+                    </div>
+                </div>
+                <div class="position" id="sports-vc">
+                    <h3>Sports (VC)</h3>
+                    <div class="candidate-list">
+                        <div class="candidate" data-candidate="RAHMATH_SVC"><img src="images/RAHMATH.jpg" alt="RAHMATH"><span>RAHMATH</span></div>
+                        <div class="candidate" data-candidate="MD_NAVID_SVC"><img src="images/MD NAVID.jpg" alt="MD NAVID"><span>MD NAVID</span></div>
+                        <div class="candidate" data-candidate="AMAAN_SVC"><img src="images/AMAAN.jpg" alt="AMAAN"><span>AMAAN</span></div>
+                    </div>
+                </div>
+                <div class="position" id="literacy-vc">
+                    <h3>Literacy (V.C)</h3>
+                    <div class="candidate-list">
+                        <div class="candidate" data-candidate="ZAARA_FIRDOUSE_LVC"><img src="images/ZAARA FIRDOUSE.jpg" alt="ZAARA FIRDOUSE"><span>ZAARA FIRDOUSE</span></div>
+                        <div class="candidate" data-candidate="NABEELA_LVC"><img src="images/NABEELA.jpg" alt="NABEELA"><span>NABEELA</span></div>
+                        <div class="candidate" data-candidate="AYESHA_FATIMA_LVC"><img src="images/AYESHA FATIMA.jpg" alt="AYESHA FATIMA"><span>AYESHA FATIMA</span></div>
+                        <div class="candidate" data-candidate="MD_AYAAZ_LVC"><img src="images/MD AYAAZ.jpg" alt="MD AYAAZ"><span>MD AYAAZ</span></div>
+                        <div class="candidate" data-candidate="MUNTASSIR_LVC"><img src="images/MUNTASSIR.jpg" alt="MUNTASSIR"><span>MUNTASSIR</span></div>
+                        <div class="candidate" data-candidate="RAHAN_UR_RAHMAN_LVC"><img src="images/RAHAN UR RAHMAN.jpg" alt="RAHAN UR RAHMAN"><span>RAHAN UR RAHMAN</span></div>
+                    </div>
+                </div>
             </div>
         </main>
         <div class="footer">
