--- a/results.html
+++ b/results.html
@@ -13,7 +13,7 @@
             <p>Results are updated in real-time as votes are cast.</p>
         </header>
         <main>
-             <div class="position" id="head-boy-results">
+            <div class="position" id="head-boy-results">
                 <h3>Head Boy</h3>
                 <div class="candidate-list">
                     <div class="candidate-result" data-candidate="TILAWATH"><img src="images/TILAWATH.jpg" alt="TILAWATH"><span>TILAWATH</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
@@ -176,6 +176,44 @@
                         <div class="candidate-result" data-candidate="SOHA"><img src="images/SOHA.jpg" alt="SOHA"><span>SOHA</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
                         <div class="candidate-result" data-candidate="YAQOOB"><img src="images/YAQOOB.jpg" alt="YAQOOB"><span>YAQOOB</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
                         <div class="candidate-result" data-candidate="WAHEED_RABBANI"><img src="images/WAHEED RABBANI.jpg" alt="WAHEED RABBANI"><span>WAHEED RABBANI</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                    </div>
+                </div>
+
+                <div class="position" id="cultural-vc-results">
+                    <h3>Cultural (V.C)</h3>
+                    <div class="candidate-list">
+                        <div class="candidate-result" data-candidate="SUMMAIYA_CVC"><img src="images/SUMMAIYA.jpg" alt="SUMMAIYA"><span>SUMMAIYA</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="ANOUD_CVC"><img src="images/ANOUD.jpg" alt="ANOUD"><span>ANOUD</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="YASMEEN_CVC"><img src="images/YASMEEN.jpg" alt="YASMEEN"><span>YASMEEN</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                    </div>
+                </div>
+                <div class="position" id="discipline-vc-results">
+                    <h3>Discipline (V.C)</h3>
+                    <div class="candidate-list">
+                        <div class="candidate-result" data-candidate="AREEBA_NASHRA_DVC"><img src="images/AREEBA NASHRA.jpg" alt="AREEBA NASHRA"><span>AREEBA NASHRA</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="AYESHA_HANI_DVC"><img src="images/AYESHA HANI.jpg" alt="AYESHA HANI"><span>AYESHA HANI</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="AHIL_UDDIN_DVC"><img src="images/AHIL UDDIN.jpg" alt="AHIL UDDIN"><span>AHIL UDDIN</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="SATTAR_DVC"><img src="images/SATTAR.jpg" alt="SATTAR"><span>SATTAR</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="RIYAN_DVC"><img src="images/RIYAN.jpg" alt="RIYAN"><span>RIYAN</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                    </div>
+                </div>
+                <div class="position" id="sports-vc-results">
+                    <h3>Sports (VC)</h3>
+                    <div class="candidate-list">
+                        <div class="candidate-result" data-candidate="RAHMATH_SVC"><img src="images/RAHMATH.jpg" alt="RAHMATH"><span>RAHMATH</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="MD_NAVID_SVC"><img src="images/MD NAVID.jpg" alt="MD NAVID"><span>MD NAVID</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="AMAAN_SVC"><img src="images/AMAAN.jpg" alt="AMAAN"><span>AMAAN</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                    </div>
+                </div>
+                <div class="position" id="literacy-vc-results">
+                    <h3>Literacy (V.C)</h3>
+                    <div class="candidate-list">
+                        <div class="candidate-result" data-candidate="ZAARA_FIRDOUSE_LVC"><img src="images/ZAARA FIRDOUSE.jpg" alt="ZAARA FIRDOUSE"><span>ZAARA FIRDOUSE</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="NABEELA_LVC"><img src="images/NABEELA.jpg" alt="NABEELA"><span>NABEELA</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="AYESHA_FATIMA_LVC"><img src="images/AYESHA FATIMA.jpg" alt="AYESHA FATIMA"><span>AYESHA FATIMA</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="MD_AYAAZ_LVC"><img src="images/MD AYAAZ.jpg" alt="MD AYAAZ"><span>MD AYAAZ</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="MUNTASSIR_LVC"><img src="images/MUNTASSIR.jpg" alt="MUNTASSIR"><span>MUNTASSIR</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
+                        <div class="candidate-result" data-candidate="RAHAN_UR_RAHMAN_LVC"><img src="images/RAHAN UR RAHMAN.jpg" alt="RAHAN UR RAHMAN"><span>RAHAN UR RAHMAN</span><div class="vote-bar-container"><div class="vote-bar"></div></div><span class="vote-count">0 votes</span></div>
                     </div>
                 </div>
             </div>
